# bibi

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md
docs/: Makefile  make.bat
docs/source/: Algorithm.rst  conf.py  getting_started.rst  index.rst
docs/source/Concepts/: Allocator.rst  Chrono.rst  Container.rst  Core.rst  Iterator.rst  Random.rst  Thread.rst  TypeTraits.rst
include/: CMakeLists.txt  bibiConfig.cmake
include/bibi/: Algorithm.h  Allocator.h  Chrono.h  Container.h  Core.h  Iterator.h  Random.h  Thread.h  TypeTraits.h
include/bibi/boost/: gil.h
test/: CMakeLists.txt
test/Boost.Gil/: Success.cpp  histogram_success.cpp  x_gradient_success.cpp
test/Chrono/: Success.cpp
test/Container/: Success.cpp
test/Random/: Success.cpp
test/Thread/: Success.cpp
